--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -832,6 +832,9 @@ The following $EVENTTYPE$ values are reserved and should be used when appropriat
   \item DOUBLEMINUTE - Double minute
 \end{itemize}
 The sematics of other $EVENTTYPE$ values is implementation-defined.
+The use of $EVENT$ is not restricted to structural variation and can also be used associated SNVs and indel.
+Such linking of small variants is useful for scenarios such as kataegis or variant position ambiguity in segmentally duplicated regions.
+
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=CILEN,Number=.,Type=Integer,Description="Confidence interval for the SVLEN field">
