can includes -> can include

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -249,7 +249,7 @@ The URL field specifies the location of a fasta file containing breakpoint assem
 \subsubsection{Contig field format}
 \label{sec-contig-field}
 It is recommended for VCF, and required for BCF, that the header includes tags describing the contigs referred to in the file.
-The structured \texttt{contig} field must include the ID attribute and can includes additional optional attributes with
+The structured \texttt{contig} field must include the ID attribute and can include additional optional attributes with
 the following ones reserved:
 \begin{itemize}
   \item length: the length of the sequence
