Use a domain reserved for examples
somewhere.org is a real site.
Use .example instead which is recommended for
use in documentation or as examples by RFC 2606

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -264,7 +264,7 @@ the following ones reserved:
 For example:
 {\scriptsize
 \begin{verbatim}
-##contig=<ID=ctg1,length=81195210,URL=ftp://somewhere.org/assembly.fa,md5=f126cdf8a6e0c7f379d618ff66beb2da,...>
+##contig=<ID=ctg1,length=81195210,URL=ftp://somewhere.example/assembly.fa,md5=f126cdf8a6e0c7f379d618ff66beb2da,...>
 \end{verbatim}
 }
 \noindent
