--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -625,7 +625,7 @@ See also Section~\ref{sv-format-keys} for a list of genotype keys reserved for s
     chr1 & $30$ & G & T & . & GT:PSL:PSO & \tt{/0/0|0|1:.,chr1*10*1:.,.,2,5} \\
   \end{tabular}
   
-  Without defining PSO, would be ambiguous as to which copy of the duplicated region the SNVs occur on.
+  Without defining PSO, it would be ambiguous as to which copy of the duplicated region the SNVs occur on.
   In this example, the presence of the PSO field clarifies that the SNVs are cis phased with the duplication, the first SNV occurs on the first copy of the duplicated region, and second SNV on the second copy.
   
   \item PSQ (List of integers): The list of PQs, one for each phase set in PSL (encoded like PQ). 
