--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -698,7 +698,7 @@ $<$*$>$ symbolic allele: the last reference call position.
 
 END must be present for all records containing the $<$*$>$ symbolic allele and, for backwards compatibility, should be present for records containing any symbolic structural variant alleles.
 
-To prevent loss of information, any VCF record containing the $<$*$>$ symbolic allele, must have END set to the last reference call position of the $<$*$>$ symbolic allele.
+To prevent loss of information, any VCF record containing the $<$*$>$ symbolic allele must have END set to the last reference call position of the $<$*$>$ symbolic allele.
 When a record contains both the $<$*$>$ symbolic allele, the END position of the longest allele should be used as the record end position for indexing purposes.
   
 \footnotesize
