--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -722,7 +722,7 @@ One value for each ALT allele.
 SVLEN must be specified for symbolic structural variant alleles.
 SVLEN is defined for $INS$, $DUP$, $INV$, and $DEL$ symbolic alleles as the number of the inserted, duplicated, inverted, and deleted bases respectively.
 SVLEN is defined for $CNV$ symbolic alleles as the length of the segment over which the copy number variant is defined.
-The missing value $.$ should be used for all other ALT allele, including ALT alleles using breakend notation.
+The missing value $.$ should be used for all other ALT alleles, including ALT alleles using breakend notation.
 
 For backwards compatibility, a missing SVLEN should be inferred from the $END$ field of VCF records whose $ALT$ field contains a single symbolic allele.
 
