Change MEINFO to METRANS
Looks like this was omitted when copy/pasting the paragraph above.

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -794,7 +794,7 @@ $MEINFO$ consists of successive quadruplets of records for each ALT allele.
 \normalsize
 
 If present, the number of entries must be four (4) times the number of ALT alleles.
-$MEINFO$ consists of successive quadruplets of records for each ALT allele.
+$METRANS$ consists of successive quadruplets of records for each ALT allele.
 
 \footnotesize
 \begin{verbatim}
