The -> the (following comma).

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -968,7 +968,7 @@ This field encodes the length of each repeat unit for situations where the lengt
 If this field is present, RUC must also be present and must contain only integer values.
 This field uses the same list-of-list encoding as RUS/RUL/RUC/RB but contains a list for each RC entry, the length of which is determined by the corresponding integer RUC value.
 This field contains the length of each individual repeat unit for each RUC entry.
-If RUB is missing or not specified, The $RUB$ for each individual repeat unit is considered to be equal to the $RUL$ for the corresponding repeat sequence.
+If RUB is missing or not specified, the $RUB$ for each individual repeat unit is considered to be equal to the $RUL$ for the corresponding repeat sequence.
 
 For the vast majority of tandem repeats, this field can be omitted and is only required in complex situations such as when a VNTR contains one or more variable length STRs.
 
