--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -1710,7 +1710,7 @@ As a result, specialised techniques have been developed to estimate the length a
 Many of these techniques result in imprecise variant calls which cannot be unambiguously represented with non-symbolic alleles.
 To accommodate such variant calls, a the $<$CNV:TR$>$ symbolic allele can be used.
 
-In general, tandem repeats can be represented in one or both of two complementary representation.
+In general, tandem repeats can be represented in one or both of two complementary representations.
 When the exact sequence is known, the variant can be represented as a non-symbolic ALT allele.
 The variant can be represented either as a single VCF record containing the entire sequence in the ALT field, or over multiple phased records.
 When the exact sequence is not known, or when reporting tandem repeat 'summary' information, the variant can be represented as a $<$CNV:TR$>$ copy number variants with the RN, RS, RL, RB, RC and RUL INFO fields encoding the nature of the repeat expansion/contraction.
