--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -1783,7 +1783,7 @@ Note the following:
     \item STRs should use RUS, whereas VNTRs should use RUL to ensure the VCF records are not excessively large.
     \item RUL should be omitted when RUS is present (as it is redundant when RS is present).
     \item RUS or RUL must be specified for each $<$CNV:TR$>$.
-    \item support for multiple levels of repeat nesting (such as STRs within VNTRs) is limited to the RUL repeat unit length field which allows the overall length of each top-level repeat unit to be encoded.
+    \item Support for multiple levels of repeat nesting (such as STRs within VNTRs) is limited to the RUL repeat unit length field which allows the overall length of each top-level repeat unit to be encoded.
     \item The POS and END of $<$CNV:TR$>$ records should match the STR/VNTR reference catalog sizes for catalog-based callers.
     \item Variant normalisation has limited utility in regions of low complexity as almost identical haplotypes can have very different normalised representations.
 \end{itemize}
