Fix typo "bouns" -> "bound"

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -1815,7 +1815,7 @@ Note that:
 \begin{itemize}
 	\item RN was omitted as it is only required if at least one $<$CNV:TR$>$ allele has RN greater than 1.
 	\item The confidence interval bounds are relative to the nominal value.
-	\item A missing upper bouns indicates the maximum length is not known.
+	\item A missing upper bound indicates the maximum length is not known.
 \end{itemize}
 
 Exactly representing nested repeats results in the loss of some repeat information when representing with a $<$CNV:TR$>$ record.
