Fix typo: "maxmimum" -> "maximum"

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -1974,7 +1974,7 @@ l\_indiv  & uint32\_t & Data length of FORMAT and individual genotype fields \\ 
 CHROM     & int32\_t  & Given as an offset into the mandatory contig dictionary \\ \hline
 POS       & int32\_t  & 0-based leftmost coordinate \\ \hline
 rlen      & int32\_t  & Length of the record as projected onto the reference sequence.
-                        Must be the maxmimum of the length of the REF allele and the length
+                        Must be the maximum of the length of the REF allele and the lengths
                         inferred from the SVLEN/END of any symbolic alleles \\ \hline
 QUAL      & float     & Variant quality; 0x7F800001 for a missing value \\ \hline
 n\_info   & uint16\_t & The number of INFO fields in this record \\ \hline
