--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -624,8 +624,8 @@ See also Section~\ref{sv-format-keys} for a list of genotype keys reserved for s
   \begin{tabular}{ l l l l l l l l l l}
   \#CHROM & POS & REF & ALT & INFO & FORMAT & SAMPLE1\\
     chr1 & $10$ & T & $<$DUP$>$ & SVCLAIM=DJ & GT:PSL:PSO & \tt{/0/0|1:.,.,chr1*10*1:.,.,3}\\
-    chr1 & $20$ & A & G & . & GT:PSL:PSO & \tt{/0/0|0|1:.,chr1*10*1:.,.,4,1} \\
-    chr1 & $30$ & G & T & . & GT:PSL:PSO & \tt{/0/0|0|1:.,chr1*10*1:.,.,2,5} \\
+    chr1 & $20$ & A & G & . & GT:PSL:PSO & \tt{/0/0|0|1:.,.,chr1*10*1,chr1*10*1:.,.,4,1} \\
+    chr1 & $30$ & G & T & . & GT:PSL:PSO & \tt{/0/0|0|1:.,.,chr1*10*1,chr1*10*1:.,.,2,5} \\
   \end{tabular}
   
   Without defining PSO, it would be ambiguous as to which copy of the duplicated region the SNVs occur on.
