--- a/VCFv4.4.tex
+++ b/VCFv4.4.tex
@@ -7,11 +7,6 @@
 \usepackage[margin=0.75in]{geometry}
 \usepackage[pdfborder={0 0 0}]{hyperref}
 
-\usepackage{draftwatermark}
-\SetWatermarkAngle{315}
-\SetWatermarkText{PRELIMINARY}
-\SetWatermarkScale{4}
-
 \usepackage{listings}
 \lstset{
    basicstyle=\ttfamily,
@@ -22,8 +17,8 @@
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 
 \begin{document}
-\input{VCFv4.4.draft.ver}
-\title{\huge \color{red} DRAFT SPEC SUBJECT TO CHANGE \\ Release Candidate 2 \\ The Variant Call Format Specification \\ \vspace{0.5em} \large VCFv4.4 and BCFv2.2}
+\input{VCFv4.4.ver}
+\title{The Variant Call Format Specification \\ \vspace{0.5em} \large VCFv4.4 and BCFv2.2}
 \date{\headdate}
 \maketitle
 \begin{quote}\small
